	  be portable to all floating point implementations.
	* configs/lm3s6965-ek/nsh - Added NuttShell (NSH) configuration for
	  the LM3S6965 Evaluation Kit.  Includes both serial and telnet
	  interfaces.
	* net/net_close.c - Correct a UDP reference counting error

5.6 2010-06-05 Gregory Nutt <spudmonkey@racsa.co.cr>

	* drivers/lcd/p14201.c - Driver for RiT P14201 series 128x96 4-bit OLED.
	* configs/lm3s6965-ek/nx - NX graphics configuration for the LM3S6965
	  Ethernet Evaluation Kit.
	* graphics/ - Numerous fixes to get the P14201 4-bpp greyscale display
	  working (there may still be some minor issues .. see the TODO list).
	* arch/arm/include/lpc17xx and arch/arm/src/lpc17xxx - Began port for
	  NXP LPC1768.  As of the 5.6 release, there is a complete set of
	  LPC17xx header files defining all bits in all LPC17xx registers,
	  but little else (I still do not have hardware in hand).
	* drivers/mtd/m25px.c - Add support for M25P1 flash part (See NOTE)
	* include/nuttx/i2c.h - Extended I2C interface definition to handle
	  multiple transfers (See NOTE).
	* include/nuttx/usbdev.h - Corrected an important macro definition
	  needed to correctly handle USB null packet transfers (See NOTE).
	* arch/arm/src/lpc313x - New drivers: I2C and SPI.  Plus several
	  important LPC313x USB bug fixes (See NOTE).

	NOTE: Contributed by David Hewson.

5.7 2010-06-22 Gregory Nutt <spudmonkey@racsa.co.cr>

	* configs/nucleus2g - Add ostest configuration for the Nucleus 2G
	  LPC1768 board from 2G Engineering (http://www.2g-eng.com/)
	* arch/arm/src/lpc17xx - Added basic LPC17xx boot-up logic,
	  interrupt handling, and GPIO configuration.
	* configs/nucleus2g/ostest - Completed bring-up of LPC1768 on
	  the Nucleus2G board using the examples/ostest
	* configs/nucleus2g/nsh - Added and verified a NuttShell (NSH)
	  configuration for the LPC1768 on the Nucleus2G board.

5.8 2010-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>