@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: June 22, 2010</p>
+      <p>Last Updated: June 30, 2010</p>
     </td>
   </tr>
 </table>
@@ -1438,6 +1438,29 @@ BFD_ASSERT (*plt_offset != (bfd_vma) -1);
   </td>
 </tr>
 <tr>
+  <td><br></td>
+  <td><hr></td>
+</tr>
+<tr>
+  <td><br></td>
+  <td>
+    <p>
+      <b>XTRS: TRS-80 Model I/III/4/4P Emulator for Unix</b>.
+      A very similar Z80 port is available for <a href="http://www.tim-mann.org/xtrs.html">XTRS</a>,
+      the TRS-80 Model I/III/4/4P Emulator for Unix.
+      That port also uses the <a href="http://sdcc.sourceforge.net/">SDCC</a> toolchain
+      under Linux or Cygwin (verified using version 2.6.0).
+    </p>
+    <ul>
+      <p>
+       <b>STATUS:</b>
+       Basically the same as for the Z80 instruction set simulator.
+       This port was contributed by Jacques Pelletier.
+      </p>
+    <ul>
+  </td>
+</tr>
+<tr>
   <td valign="top"><img height="20" width="20" src="favicon.ico"></td>
   <td bgcolor="#5eaee1">
     <b>Other ports</b>
@@ -1799,6 +1822,11 @@ buildroot-1.8 2009-12-21 &lt;spudmonkey@racsa.co.cr&gt;
 
 <ul><pre>
 nuttx-5.8 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
+
+	* configs/nucleus2g/src/up_nsh.c and up_ssp.c - Add support
+	  for SPI-based MMC/SD cards and integrate into the NSH example.
+	* arch/arm/src/lm3s/lm3s_vectors.S - Correct vectors for GPIOC & D
+	  interrupts.
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
